--- a/servicios.html
+++ b/servicios.html
@@ -101,6 +101,117 @@
         <section class="servicios-esp">
             <h2 class="main__subtitulo servicios-esp__subtitulo especialidad">Nuestra especialidad</h2>
             <h3 class="servicios-esp__especialidad">Asesoramiento especializado en derecho del trabajo.</h3>
+
+            <div class="slide-contenedor">
+
+                <div class="slider fade">
+                    <img src="img/construccion.jpg" alt="" class="alta">
+                    <img src="img/construccion-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO DE LA  CONSTRUCCION EN SUS DIVERSAS VARIABLES DE ACTIVIDAD</b>
+                        <br>Ley 22.250, Dec. 1371/80 CCT Nro.76/75, 545/08 (obra en yacimientos pretrolíferos), 577/10 (obras de redes de acceso, distribución y transporte) y demás normativa aplicable.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/comercio.jpg" alt="" class="alta">
+                    <img src="img/comercio-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO DE EMPLEADOS DE COMERCIO</b>
+                        <br>Ley 20.744, Dec 1.567/74, CCT Nro 130/75 y demás normativa concordante.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/agro.jpg" alt="" class="alta">
+                    <img src="img/agro-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO AGRARIO</b>
+                        <br>Ley 26.727, Resoluciones de Comisión Nacional de Trabajo Agrario (CNTA) y demás normativa concordante.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/periodista.jpg" alt="" class="alta">
+                    <img src="img/periodista-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO DE PERIODISTAS PROFESIONALES</b>
+                        <br>Ley 12.908, leyes modificatorias, y demás normativa concordante.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/domestico.jpg" alt="" class="alta">
+                    <img src="img/domestico-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO DE SERVICIO DOMESTICO</b>
+                        <br>Ley 26.844, Decreto 340/13 y Convenios colectivos vigentes.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/camara.jpg" alt="" class="alta">
+                    <img src="img/camara-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO DE ACTIVIDAD DE RADIOCABLEGRAFICOS Y PERSONAL A FIN</b>
+                        <br>Decreto 14.954/1946, Ley 12.921, y modificatorias.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/docente.jpg" alt="" class="alta">
+                    <img src="img/docente-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO DE PERSONAL DOCENTE EN ESTABLECIMIENTOS DE ENSEÑANZA</b>
+                        <br>Leyes 13.047, 14.473, normativa modificatoria y complementaria aplicable. </p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/medicina.jpg" alt="" class="alta">
+                    <img src="img/medicina-r.jpg" alt="" class="media">
+                    <p><b>TRABAJO PROFESIONALES Y AUXILIARES DE LA MEDICINA</b>
+                        <br>Decreto 22.212/45, Ley 17.132 y demás normativa complementaria y modificatoria</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/deporte.jpg" alt="" class="alta">
+                    <img src="img/deporte-r.jpg" alt="" class="media">
+                    <p><b>ACTIVIDAD DE FUTBOLISTAS PROFESIONALES</b>
+                        <br>Ley 20.160, leyes y resoluciones modificatorias, Convenio colectivo de trabajo Nro. 557/09/ Res 1494/13 MTESSN y demás normativa concordante.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/peluquero.jpg" alt="" class="alta">
+                    <img src="img/peluquero-r.jpg" alt="" class="media">
+                    <p><b>PERSONAL DE ACTIVIDAD DE PELUQUERIA</b>
+                        <br>Leyes 24.521, 26.206 y demás normativa aplicable.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/universidad.jpg" alt="" class="alta">
+                    <img src="img/universidad-r.jpg" alt="" class="media">
+                    <p><b>PERSONAL DOCENTE UNIVERSITARIO NACIONAL</b>
+                        <br>Ley 23.947, CCT 467/2006, CCT 520/2007, y demás normativa aplicable.</p>
+                </div>
+
+                <div class="slider fade">
+                    <img src="img/publico.jpg" alt="" class="alta">
+                    <img src="img/publico-r.jpg" alt="" class="media">
+                    <p><b>EMPLEADOS ESTATALES</b>
+                        <br>Ley 25.164, Decretos 92/1995 - 1184/2001 y 2345/2008 y demás normativa complementaria.</p>
+                </div>
+
+                <div class="direcciones">
+                    <button type="button" class="atras" onclick="avanzaSlide(-1)"><i class="fas fa-angle-left"></i></button>
+                 
+
+                    <button type="button" class="adelante" onclick="avanzaSlide(1)"><i class="fas fa-angle-right"></i></button>
+                   
+                </div>
+
+                <div class="barras">
+                    <span class="barra active" onclick="posicionSlide(1)"></span>
+                    <span class="barra" onclick="posicionSlide(2)"></span>
+                    <span class="barra" onclick="posicionSlide(3)"></span>
+                    <span class="barra" onclick="posicionSlide(4)"></span>
+                    <span class="barra" onclick="posicionSlide(5)"></span>
+                    <span class="barra" onclick="posicionSlide(6)"></span>
+                    <span class="barra" onclick="posicionSlide(7)"></span>
+                    <span class="barra" onclick="posicionSlide(8)"></span>
+                    <span class="barra" onclick="posicionSlide(9)"></span>
+                    <span class="barra" onclick="posicionSlide(10)"></span>
+                    <span class="barra" onclick="posicionSlide(11)"></span>
+                    <span class="barra" onclick="posicionSlide(12)"></span>
+                </div>
+            </div>
+
             <p class="servicios-esp__descripcion">
                 Somos especialistas en todas las áreas del Derecho del Trabajo y contamos con experiencia en el asesoramiento jurídico respecto de relaciones laborales, incluyendo la actuación en procesos judiciales de toda índole en las provincias de Rio Negro y Neuquén, como así también en la resolución de conflictos entre Trabajador y Empleador.
                 <br>
@@ -262,6 +373,7 @@
     </footer>
 
     <script src="js/overlay.js"></script>
+    <script src="js/slider.js"></script>
     <script src="js/boton-arriba.js"></script>
 
 </body>
