--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="Estudio Jurídico pionero en el alto valle de Rio Negro y Neuquen. Nos especializamos en derecho del trabajo y contamos con destacada trayectoria en materia de derecho civil.">
+    <meta name="keywords" content="abogados, estudio juridico, argentina, asesoria, resolucion, disputas, consulta juridica, legal, bufete de abogados, equipo de abogados, comercial, fuero civil, familia, fuero comercial, fuero laboral, extrajudicial">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/normalize.css">
@@ -79,8 +81,8 @@
                     <li class="menu__submenu">
                         <a href="#">Quienes Somos<span class="caret"><i class="fas fa-chevron-down"></i></span></a>
                         <ul class="menu__children">
-                            <li><a href="quienessomos-staff.html">Nuestra Firma</a></li>
-                            <li><a href="quienessomos-staff.html#staff">Nuestro Staff</a></li>
+                            <li><a href="quienessomos.html">Nuestra Firma</a></li>
+                            <li><a href="quienessomos.html#staff">Nuestro Staff</a></li>
                         </ul>
                     </li>
                     <li class="menu__submenu">
@@ -114,7 +116,7 @@
 
             <div class="main__botones">
                 <a href="servicios.html"><input type="button" value="Servicios" class="main__boton"></a>
-                <a href="quienessomos-staff.html"><input type="button" value="Quienes somos" class="main__boton"></a>
+                <a href="quienessomos.html"><input type="button" value="Quienes somos" class="main__boton"></a>
                 <a href="contacto.html"><input type="button" value="Contacto" class="main__boton"></a>
             </div>
         </section>
