--- a/quienessomos.html
+++ b/quienessomos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="Estudio Jurídico pionero en el alto valle de Rio Negro y Neuquen. Nos especializamos en derecho del trabajo y contamos con destacada trayectoria en materia de derecho civil.">
+    <meta name="keywords" content="abogados, estudio juridico, argentina, asesoria, resolucion, disputas, consulta juridica, legal, bufete de abogados, equipo de abogados, comercial, fuero civil, familia, fuero comercial, fuero laboral, extrajudicial">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,7 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/menu.js"></script>
-    <title>Estudio Jurídico Díaz Barcia</title>
+    <title>Estudio Jurídico Díaz Barcia - Quienes somos</title>
 </head>
 
 <body>
@@ -79,8 +81,8 @@
                     <li class="menu__submenu">
                         <a href="#">Quienes Somos<span class="caret"><i class="fas fa-chevron-down"></i></span></a>
                         <ul class="menu__children">
-                            <li><a href="quienessomos-staff.html">Nuestra Firma</a></li>
-                            <li><a href="quienessomos-staff.html#staff">Nuestro Staff</a></li>
+                            <li><a href="quienessomos.html">Nuestra Firma</a></li>
+                            <li><a href="quienessomos.html#staff">Nuestro Staff</a></li>
                         </ul>
                     </li>
                     <li class="menu__submenu">
