--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/menu.js"></script>
-    <title>Estudio Jurídico Díaz Barcia</title>
+    <title>Estudio Jurídico Díaz Barcia - Inicio</title>
 </head>
 
 <body>
