--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
     
                 <div class="logoYcontacto">
                     <div class="logo">
-                        <img src="img/logo-alta2.png" alt="" class="logo__imagen">
+                        <a href="index.html"><img src="img/logo-alta2.png" alt="" class="logo__imagen"></a>
                     </div>
             
                     <div class="tel-mail">
