--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="Estudio Jurídico pionero en el alto valle de Rio Negro y Neuquen. Nos especializamos en derecho del trabajo y contamos con destacada trayectoria en materia de derecho civil.">
-    <meta name="keywords" content="abogados, estudio juridico, argentina, asesoria, resolucion, disputas, consulta juridica, legal, bufete de abogados, equipo de abogados, comercial, fuero civil, familia, fuero comercial, fuero laboral, extrajudicial">
+    <meta name="keywords" content="abogados, estudio juridico, argentina, neuquen, rio negro, alto valle, cinco saltos, asesoria, resolucion, disputas, consulta juridica, legal, bufete de abogados, equipo de abogados, comercial, fuero civil, familia, fuero comercial, fuero laboral, extrajudicial">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/normalize.css">
